2006-11-20 Sandro Santilli <strk@refractions.net>

	* utils/postgis_restore.pl (canonicalize_typename):
	  canonicalize 'timezone .* time stamp' to 'timezone'
	  (fixes bug #121)

2006-11-17 "Antoine Bajolet" <antoine.bajolet@tdf.fr>

	* lwgeom/lwgeom_gist.c: fixed 'directives may not be used inside a
	  macro argument' error raised by some compilers.

2006-11-10 Sandro Santilli <strk@refractions.net>

	* configure.in (geos detection): use $geos_prefix/lib when
	  --ldflags is not supported by geos-config available.

2006-11-10 Havard Tveite <havard.tveite@nlh.no>

	* doc/postgix.xml (Hard Upgrade): add info about createdb params
	* utils/postgis_restore.pl: fix use of createdb params

2006-11-02 Sandro Santilli <strk@refractions.net>

	* doc/postgis.xml: list setSRID bug fix in 'Bug fixes' section.

2006-11-02 Markus Schaber <schabi@logix-tt.com>

	* NEWS, postgis.xml, java/jdbc/src/org/postgis/ComposedGeom.java:
          fixed setSRID bug in JDBC ComposedGeom.  

2006-11-02 Sandro Santilli <strk@refractions.net>

	* Version.config, doc/postgis.xml, NEWS: prepared
	  for 1.1.6 release.

2006-11-02 Sandro Santilli <strk@refractions.net>

	* lwgeom/lwgeom_api.c, lwgeom/wktunparse.c: cast -1 to a char
	  to make some compilers happy about comparison with a char
	  type.

2006-10-25 10:23  mschaber

	* CHANGES, lwgeom/lwgeom_geos_c.c: fixed CAPI change that broke
	  64-bit platforms

2006-10-25 10:00  mschaber

	* CHANGES: updated changelog to reflect loader regression fix

2006-10-25 09:57  mschaber

	* regress/Makefile: Make regress test build loader and dumper as it
	  needs them

2006-10-24 12:35  strk

	* CHANGES, lwgeom/lwgeom_transform.c: use Z ordinate in
	  reprojections

2006-10-19 12:01  strk

	* CHANGES, spatial_ref_sys.sql: spatial_ref_sys.sql updated to EPSG
	  6.11.1

2006-10-14 14:22  mschaber

	* CHANGES, doc/man/pgsql2shp.1, doc/man/shp2pgsql.1,
	  loader/README.pgsql2shp, loader/README.shp2pgsql,